--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,36 @@
 asgiref==3.5.2
+async-generator==1.10
+attrs==22.1.0
 backports.zoneinfo==0.2.1
+black==22.12.0
+certifi==2022.12.7
+click==8.1.3
+coverage==7.0.1
 Django==3.0
 django-bootstrap3==8.2.3
 django-crum==0.7.9
+exceptiongroup==1.0.4
+h11==0.14.0
+idna==3.4
+iniconfig==1.1.1
+isort==5.11.2
+mypy-extensions==0.4.3
+outcome==1.2.0
+packaging==22.0
+pathspec==0.10.3
+platformdirs==2.6.0
+pluggy==1.0.0
+PySocks==1.7.1
+pytest==7.2.0
+pytest-django==4.5.2
 pytz==2017.2
+selenium==4.7.2
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.3
+tomli==2.0.1
+trio==0.22.0
+trio-websocket==0.9.2
+typing-extensions==4.4.0
+urllib3==1.26.13
+wsproto==1.2.0
