--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ cffi==1.17.0
 click==8.1.7
 colorama==0.4.6
 coverage==7.6.1
+dj-database-url==2.3.0
 Django==5.1
 django-bootstrap3==24.2
 django-crum==0.7.9
 exceptiongroup==1.2.2
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.8
 iniconfig==2.0.0
@@ -24,11 +26,13 @@ pip-review==1.3.0
 pip-tools==7.4.1
 platformdirs==4.2.2
 pluggy==1.5.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 pyproject_hooks==1.1.0
 PySocks==1.7.1
 pytest==8.3.2
 pytest-django==4.8.0
+python-decouple==3.8
 pytz==2024.1
 selenium==4.24.0
 sniffio==1.3.1
